# internal/app/swagger/swagger.json
@@ -32,6 +32,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "integer",
+                        "description": "create_at 结束",
+                        "name": "createdAt_Ed",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "description": "asc, desc",
                         "name": "createdAt_Order",
@@ -39,8 +45,20 @@
                     },
                     {
                         "type": "integer",
+                        "description": "create_at 开始",
+                        "name": "createdAt_St",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
                         "description": "当前页",
                         "name": "current",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "状态",
+                        "name": "isActive",
                         "in": "query"
                     },
                     {
@@ -78,6 +96,24 @@
                         "type": "string",
                         "description": "查询值",
                         "name": "queryValue",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "create_at 结束",
+                        "name": "sort_Ed",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "asc desc",
+                        "name": "sort_Order",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "create_at 结束",
+                        "name": "sort_St",
                         "in": "query"
                     }
                 ],
@@ -1446,6 +1482,12 @@
                         "type": "string",
                         "description": "简拼",
                         "name": "initials",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "状态",
+                        "name": "isActive",
                         "in": "query"
                     },
                     {
@@ -3678,7 +3720,7 @@
                     "description": "创建者",
                     "type": "string"
                 },
-                "d_addr": {
+                "daddr": {
                     "description": "详细地址",
                     "type": "string"
                 },
@@ -3701,6 +3743,9 @@
                 "provice_id": {
                     "description": "省/市ID",
                     "type": "string"
+                },
+                "sort": {
+                    "type": "integer"
                 },
                 "updated_at": {
                     "description": "更新时间",
